ci: add JDK25 builds